--- a/.github/workflows/python_env.yml
+++ b/.github/workflows/python_env.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12' 
     
     - name: Install Python dependencies
       run: |
