--- a/.github/workflows/noise_processing.yml
+++ b/.github/workflows/noise_processing.yml
@@ -8,8 +8,8 @@ on:
     #  - main
     #  - caching
 
-  #schedule:
-  #  - cron: '51 21 8 7 *'
+  schedule:
+   - cron: '20 3 7 oct *'
     
 jobs:
   process:
